objects/CMPL123CME__MDR__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__AASR_MDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AASR MDR</label>
        <referenceTo>CMPL123CME__MDR__c</referenceTo>
        <relationshipLabel>IASR</relationshipLabel>
        <relationshipName>AASR_MDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__ACK1CoreID__c</fullName>
        <description>Message Core ID generated by FDA. First response ti submission.</description>
        <label>ACK1 CoreID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__ACK1PassMessage__c</fullName>
        <description>Pass message from FDA</description>
        <label>ACK1 Pass Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__ACK1ReceivedDate__c</fullName>
        <description>Date Time when message was received by FDA first time.</description>
        <label>ACK1 Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__ACK1RejectMessage__c</fullName>
        <description>Reject message from FDA, if exists one.</description>
        <label>ACK1 Reject Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__ACK2_Date__c</fullName>
        <description>ACK2 Date</description>
        <label>ACK2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__ACK3_Date_Failure__c</fullName>
        <description>ACK3 Date Failure</description>
        <label>ACK3 Date Failure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__ACK3_Date__c</fullName>
        <description>ACK3 Date</description>
        <label>ACK3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__AS2MessageID__c</fullName>
        <description>AS2 Message ID that was generated by our submission system for a message that sent to FDA.</description>
        <label>AS2 Message ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__ASR_Type__c</fullName>
        <label>ASR Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AASR</fullName>
                </value>
                <value>
                    <fullName>IASR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__A_NDA_No__c</fullName>
        <description>(A)NDA No</description>
        <label>(A)NDA No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Addtl_Mfg_Narrative__c</fullName>
        <label>Addtl Mfg Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__AdverseEvent_ProductProblem__c</fullName>
        <description>Adverse Event/Product Problem</description>
        <inlineHelpText>Adverse Event/Product Problem</inlineHelpText>
        <label>Adverse Event/Product Problem</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
                <value>
                    <fullName>Product Problem(Eg.defects/malfunctions)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Adverse_Event_Product_Problem__c</fullName>
        <description>Adverse Event/Product Problem</description>
        <label>Adverse Event/Product Problem</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Adverse_Event__c</fullName>
        <label>Adverse Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Advrese_Event_Term__c</fullName>
        <inlineHelpText>Advrese Event Term(s)</inlineHelpText>
        <label>Adverse Event Term(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Age_Units_Patient__c</fullName>
        <description>Age Units (Patient)</description>
        <label>Age Units (Patient)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Age_Units__c</fullName>
        <description>Age Units</description>
        <label>Age Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Age_at_Time_of_Event__c</fullName>
        <description>Age at Time of Event</description>
        <label>Age at Time of Event</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Approximate_age_of_device__c</fullName>
        <description>Approximate age of device</description>
        <label>Approximate age of device</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDR_Assigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Brand_Name__c</fullName>
        <description>Brand Name</description>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Catalog_No__c</fullName>
        <description>Catalog No</description>
        <label>Catalog No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CombinationProduct__c</fullName>
        <label>Combination Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Comination_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Comination Product</description>
        <label>Combination Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Comitant_Medical_Prod__c</fullName>
        <description>Comitant Medical Prod</description>
        <label>Concomitant Medical Prod</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Common_Device_Name__c</fullName>
        <description>Common Device Name</description>
        <label>Common Device Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>CMPL123CME__Complaint__c</referenceTo>
        <relationshipLabel>MDR</relationshipLabel>
        <relationshipName>MDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Concomitant_Med_Prod__c</fullName>
        <description>Concomitant Medical Product</description>
        <inlineHelpText>Concomitant Medical Product</inlineHelpText>
        <label>Concomitant Medical Prod</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Concomitant_Medical_Prod__c</fullName>
        <description>Concomitant Medical Products And Therapy Dates (Exclude treatment of event)</description>
        <inlineHelpText>Concomitant Medical Products And Therapy Dates (Exclude treatment of event)</inlineHelpText>
        <label>Concomitant Medical Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Concomittant_Products__c</fullName>
        <label>Concomitant Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Contact_Office__c</fullName>
        <label>Contact Office</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__CorrectionData__c</fullName>
        <description>Correction Data</description>
        <inlineHelpText>Correction Data</inlineHelpText>
        <label>Correction Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Correction_Data__c</fullName>
        <description>Correction Data</description>
        <label>Correction Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Correction_Removal_Report_No__c</fullName>
        <description>Correction/Removal Report No</description>
        <inlineHelpText>If action reported to FDA under 21 USC 360i(f) list Correction/Removal Report No</inlineHelpText>
        <label>Correction/Removal Report No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D3_Manufacturer_of_Suspect_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>D3 Manufacturer of Suspect Device</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (D3 Manufacturer of Suspect Device)</relationshipLabel>
        <relationshipName>MDR5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D9_Reprocessor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>D9 Reprocessor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (D9 Reprocessor)</relationshipLabel>
        <relationshipName>MDR7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__DOB__c</fullName>
        <description>Date of Birth</description>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_Due__c</fullName>
        <description>Date Due</description>
        <label>Date Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_facility_dist_was_aware__c</fullName>
        <description>Date facility/dist was aware</description>
        <label>Date facility/dist was aware</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_of_Death__c</fullName>
        <description>Date of Death</description>
        <label>Date of Death</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_of_Event__c</fullName>
        <label>Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_of_Submission_MDN__c</fullName>
        <description>Date of Submission (MDN)</description>
        <label>Date of Submission (MDN)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_of_this_Report__c</fullName>
        <description>Date of this Report</description>
        <label>Date of this Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_received_by_MFG__c</fullName>
        <description>Date received by MFG</description>
        <label>Date received by Mfg</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_report_sent_to_FDA__c</fullName>
        <description>Date report sent to FDA</description>
        <label>Date report sent to FDA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_report_sent_to_MFG__c</fullName>
        <description>Date report sent to MFG</description>
        <label>Date report sent to Mfg</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_returned_to_MFG__c</fullName>
        <description>Date returned to MFG</description>
        <label>Date returned to Mfg</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Dateof_Death__c</fullName>
        <description>Date of Death</description>
        <inlineHelpText>Date of Death</inlineHelpText>
        <label>Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Describe_Event__c</fullName>
        <description>Describe Event</description>
        <label>Describe Event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Age_Units__c</fullName>
        <label>Device Age Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Age_with_units__c</fullName>
        <formula>Text(CMPL123CME__Approximate_age_of_device__c) &amp; " " &amp; Text(CMPL123CME__Device_Age_Units__c)</formula>
        <label>Device Age (with units)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Eval_By_Mfg__c</fullName>
        <inlineHelpText>Device evaluated by Manufacturer</inlineHelpText>
        <label>Unused Device Eval By Mfg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Returned to Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Evaluation Summary Attached</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Evaluated_by_Manufacturer__c</fullName>
        <label>Device Evaluated by Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Evaluation_Addl_Text__c</fullName>
        <label>Device Evaluation - Addl Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_ProvideCode__c</fullName>
        <description>Device Provide Code</description>
        <inlineHelpText>Device Provide Code</inlineHelpText>
        <label>Device Provide Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 Device received in a condition which made analysis impossible</fullName>
                </value>
                <value>
                    <fullName>02 Device evaluation anticipated, but not yet begun</fullName>
                </value>
                <value>
                    <fullName>03 Device not made by company</fullName>
                </value>
                <value>
                    <fullName>04 Device problem already known, no evaluation necessary</fullName>
                </value>
                <value>
                    <fullName>81 Other (code unspecified, describe in H10)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Provide_Code__c</fullName>
        <inlineHelpText>No (Attach Code to Explain why not) or Provide code</inlineHelpText>
        <label>Device Provide Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Returned_to_Manufacturer__c</fullName>
        <label>Device Returned to Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_available_for_Eval__c</fullName>
        <label>Device available for Eval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_evaluation_by_manufacturer__c</fullName>
        <description>Device evaluation by manufacturer</description>
        <inlineHelpText>Device evaluation by manufacturer</inlineHelpText>
        <label>Device evaluation by manufacturer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Returned to Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Evaluation Summary Attached</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_mfg_date__c</fullName>
        <label>Device Mfg date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Diagnosis_for_use_1__c</fullName>
        <label>Diagnosis for use 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Diagnosis_for_use_2__c</fullName>
        <description>Diagnosis for use 2</description>
        <label>Diagnosis for use 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Dose_Freq_Route_1__c</fullName>
        <description>Dose/Freq/Route 1</description>
        <label>Dose/Freq/Route 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Dose_Freq_Route_2__c</fullName>
        <description>Dose/Freq/Route 2</description>
        <label>Dose/Freq/Route 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__E1_Initial_Reporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Reporter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MDR (E1. Initial Reporter)</relationshipLabel>
        <relationshipName>MDR2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Evaluation_Summary_Attached__c</fullName>
        <label>Evaluation Summary Attached</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CMPL123CME__Device_Evaluated_by_Manufacturer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Event_Location_Addl_Text__c</fullName>
        <label>Event Location - Addl Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Event_abated_stopped_use_1__c</fullName>
        <description>Event abated stopped use 1</description>
        <label>Event abated stopped use 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Does Not Apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Event_abated_stopped_use_2__c</fullName>
        <description>Event abated stopped use 2</description>
        <label>Event abated stopped use 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Does Not Apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Event_reappered_with_re_use_1__c</fullName>
        <description>Event reappered with re-use 1</description>
        <label>Event reappeared with re-use 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Does Not Apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Event_reappered_with_re_use_2__c</fullName>
        <description>Event reappered with re-use 2</description>
        <label>Event reappeared with re-use 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Does Not Apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Exp_Date_1__c</fullName>
        <label>Exp. Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Exp_Date_2__c</fullName>
        <label>Exp. Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Expiration_Date__c</fullName>
        <description>Expiration Date</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Explant_Date__c</fullName>
        <description>Explant Date</description>
        <label>Explant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__F14_Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F14 Manufacturer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (F14 Manufacturer)</relationshipLabel>
        <relationshipName>MDR4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__F3_User_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F3. User Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (F3. User Facility)</relationshipLabel>
        <relationshipName>MDR3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__F4_User_Facility_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F4. User Facility Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.CMPL123CME__F3_User_Facility__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MDR (F4. User Facility Contact)</relationshipLabel>
        <relationshipName>MDR3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Facility_or_Distributor__c</fullName>
        <label>Facility or Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Facility</fullName>
                </value>
                <value>
                    <fullName>Importer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Follow_up_No__c</fullName>
        <label>Follow up No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__G1_All_Manufacturers_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>G1 All Manufacturers Contact</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (G1 All Manufacturers Contact)</relationshipLabel>
        <relationshipName>MDR6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Health_professional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Health professional</description>
        <label>Health professional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__IND_No__c</fullName>
        <label>IND No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_Remedical_Action_Init__c</fullName>
        <label>If Remedial Action Init</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
                <value>
                    <fullName>Relabeling</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Patient Monitoring</fullName>
                </value>
                <value>
                    <fullName>Modification/Adjustment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_follow_up_What_Type__c</fullName>
        <label>If follow up, What Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Additional Information</fullName>
                </value>
                <value>
                    <fullName>Response to FDA Request</fullName>
                </value>
                <value>
                    <fullName>Device Evaluation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_ind_protocol_no__c</fullName>
        <description>If ind, protocol no</description>
        <label>If ind, protocol no</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Implant_Date__c</fullName>
        <description>Implant Date</description>
        <label>Implant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_MDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial MDR</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__MDR__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Initial</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__MDR__c</referenceTo>
        <relationshipLabel>Supplemental MDR</relationshipLabel>
        <relationshipName>MDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Report_Date_and_Time__c</fullName>
        <description>Initial Report Date and Time</description>
        <label>Initial Report Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Report_sent_to_FDA__c</fullName>
        <label>Initial Report sent to FDA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter_Phone__c</fullName>
        <label>Initial Reporter Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter__c</fullName>
        <label>Initial Reporter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__LabeledForSingleUse__c</fullName>
        <label>Labeled for single use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Labeled_for_single_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labeled for single use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Loc_where_event_occurred__c</fullName>
        <label>Location Where Event Occurred</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Nursing Home</fullName>
                </value>
                <value>
                    <fullName>Outpatient Treatment Facility</fullName>
                </value>
                <value>
                    <fullName>Outpatient Diagnostic Facility</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Surgical Facility</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Lot_1__c</fullName>
        <label>Lot 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Lot_2__c</fullName>
        <label>Lot 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Lot_No__c</fullName>
        <description>Lot No</description>
        <label>Lot No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__MDR_MFR__c</fullName>
        <description>MDR MFR #</description>
        <inlineHelpText>MDR MFR #</inlineHelpText>
        <label>MDR MFR #</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123CME__MDR_Reprocessor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDR Reprocessor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR (MDR Reprocessor)</relationshipLabel>
        <relationshipName>MDR2</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>